--- a/RestaurantRater/Web.config
+++ b/RestaurantRater/Web.config
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--This is XML - a markup lanaguage like HTML.-->
+<!--This is used to conifgure settings to and from the web-->
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -8,9 +10,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-RestaurantRater-20170406035835.mdf;Initial Catalog=aspnet-RestaurantRater-20170406035835;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+  <connectionStrings>  
+    <!--Restaurants.mfd is the temporary database that can be used for this project-->
+    <add name="RestaurantDBContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Restaurants.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
